alignement and design issues solved

--- a/src/Components/Checkout/CheckoutPage.css
+++ b/src/Components/Checkout/CheckoutPage.css
@@ -15,9 +15,8 @@
     display: flex;
     justify-content: center;
     gap: 2rem;
-    background-color: transparent;
     padding: 2rem;
-    background-color: white;
+    background-color: #0b0011;
     border-radius: 10px;
     box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 1);
     width: 80%;
